tests/tooling/fixtures/native/execution/negative/unary_plus_bool_operand.objc3
module UnaryPlusBoolOperand;

fn main() -> i32 {
  let flag = true;
  return +flag;
}
